--- a/app/index.html
+++ b/app/index.html
@@ -62,11 +62,15 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/angular.chartjs/1.0.0/angular-chart.min.js"> </script>
+    
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/forecast.js"></script>
         <script src="scripts/services/cities.js"></script>
+        <script src="scripts/services/favorite.js"></script>
         <!-- endbuild -->
 </body>
 </html>
